"example MODULE.bazel to test bzlmod integration for bazeldnf with a prebuilt toolchain"

module(name = "example-bazeldnf-with-bzlmod")

bazel_dep(name = "bazeldnf")
local_path_override(
    module_name = "bazeldnf",
    path = "../..",
)

bazel_dep(name = "rules_pkg", version = "1.0.1")

bazeldnf = use_extension("@bazeldnf//bazeldnf:extensions.bzl", "bazeldnf")
bazeldnf.rpm(
    name = "libvirt-libs-11.0.0-1.fc42.x86_64.rpm",
    sha256 = "aac272a2ace134b5ef60a41e6624deb24331e79c76699ef6cef0dca22d94ac7e",
    urls = [
        "https://kojipkgs.fedoraproject.org//packages/libvirt/11.0.0/1.fc42/x86_64/libvirt-libs-11.0.0-1.fc42.x86_64.rpm",
    ],
)
bazeldnf.rpm(
    name = "libvirt-devel-11.0.0-1.fc42.x86_64.rpm",
    sha256 = "dba37bbe57903afe49b5666f1781eb50001baa81af4584b355db0b6a2afad9fa",
    urls = [
        "https://kojipkgs.fedoraproject.org//packages/libvirt/11.0.0/1.fc42/x86_64/libvirt-devel-11.0.0-1.fc42.x86_64.rpm",
    ],
)
use_repo(
    bazeldnf,
    "libvirt-devel-11.0.0-1.fc42.x86_64.rpm",
    "libvirt-libs-11.0.0-1.fc42.x86_64.rpm",
)

bazel_dep(name = "rules_cc", version = "0.1.1", dev_dependency = True)
