load("@bazeldnf//bazeldnf:defs.bzl", "bazeldnf", "rpmtree", "tar2files")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load(":test_suite.bzl", "bazeldnf_test_suite")

bazeldnf(
    name = "bazeldnf",
)

rpmtree(
    name = "something",
    rpms = [
        "@bazeldnf_rpms//git",
        "@bazeldnf_rpms//glibc",
    ],
)

rpmtree(
    name = "non-visibile-failure",
    rpms = [
        "@bazeldnf_rpms//bash",
    ],
    tags = [
        "manual",
    ],
)

tar2files(
    name = "something_binaries",
    files = {
        "/usr/bin": [
            "sh",
            "bash",
        ],
    },
    tar = ":something",
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "whatever",
    deps = [":something"],
)

bazeldnf_test_suite(
    name = "test-suite",
)
