load("@bazeldnf//bazeldnf:defs.bzl", "bazeldnf", "rpmtree", "tar2files")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

bazeldnf(
    name = "bazeldnf",
)

rpmtree(
    name = "something",
    rpms = [
        "@bazeldnf_rpms//git",
        "@bazeldnf_rpms//glibc",
        "@bazeldnf_rpms//bash",
    ],
)

tar2files(
    name = "something_binaries",
    files = {
        "/usr/bin": [
            "sh",
            "bash",
        ],
    },
    tar = ":something",
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "whatever",
    deps = [":something"],
)
