load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "reducer",
    srcs = [
        "doc.go",
        "reducer.go",
    ],
    importpath = "github.com/rmohr/bazeldnf/pkg/reducer",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/api",
        "//pkg/api/bazeldnf",
        "//pkg/repo",
        "@com_github_sirupsen_logrus//:logrus",
    ],
)
