load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "repo",
    srcs = [
        "init.go",
        "repo.go",
    ],
    importpath = "github.com/rmohr/bazeldnf/pkg/repo",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/api",
        "//pkg/api/bazeldnf",
        "@com_github_sirupsen_logrus//:logrus",
        "@io_k8s_sigs_yaml//:yaml",
    ],
)
