load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "rpm",
    srcs = [
        "cpio2tar.go",
        "rpm.go",
        "tar.go",
    ],
    importpath = "github.com/rmohr/bazeldnf/pkg/rpm",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/api",
        "//pkg/xattr",
        "@com_github_malt3_go_rpmutils//:go_default_library",
        "@com_github_malt3_go_rpmutils//cpio:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)

go_test(
    name = "rpm_test",
    srcs = [
        "rpm_test.go",
        "tar_test.go",
    ],
    data = ["@libvirt-libs-6.1.0-2.fc32.x86_64.rpm//rpm"],
    embed = [":rpm"],
    deps = [
        "//pkg/api",
        "@com_github_onsi_gomega//:go_default_library",
    ],
)
