load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "rpm",
    srcs = [
        "cpio2tar.go",
        "rpm.go",
        "tar.go",
    ],
    importpath = "github.com/rmohr/bazeldnf/pkg/rpm",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/api",
        "//pkg/xattr",
        "@com_github_sassoftware_go_rpmutils//:go-rpmutils",
        "@com_github_sassoftware_go_rpmutils//cpio",
        "@com_github_sirupsen_logrus//:logrus",
    ],
)

go_test(
    name = "rpm_test",
    srcs = [
        "rpm_test.go",
        "tar_test.go",
    ],
    data = [
        "@abseil-cpp-devel-20240722.1-1.fc42.x86_64.rpm//rpm",
        "@libvirt-libs-11.0.0-1.fc42.x86_64.rpm//rpm",
    ],
    embed = [":rpm"],
    deps = [
        "//pkg/api",
        "@com_github_bazelbuild_rules_go//go/runfiles",
        "@com_github_onsi_gomega//:gomega",
    ],
)
