load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load(":defs.bzl", "build_for_all_platforms")

build_for_all_platforms(name = "release")

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//bazeldnf:platforms",
        "//tools:version",
        "@bazel_lib//lib:copy_file",
        "@bazel_lib//lib:transitions",
        "@bazel_lib//lib:write_source_files",
    ],
)
